# oliker_prussner_method

./: .gitignore  LICENSE  README.md  main.py  oliker_prussner_init.py  oliker_prussner_main.py  oliker_prussner_plot.py  oliker_prussner_triangulation.py  pyproject.toml  requirements.txt
circle_5_4_1/: adjacencies.npy  latest_run.npz
circle_6_4_2/: adjacencies.npy  latest_run.npz
core_src/: oliker_prussner_core.py  oliker_prussner_coreinit.py
square_13_0.5_5/: adjacencies.npy  latest_run.npz
square_13_1.0_5/: adjacencies.npy  latest_run.npz
square_9_1.0_3/: adjacencies.npy  latest_run.npz
src/oliker_prussner_method/: __init__.py  core.py  initialisation.py  plotting.py  triangulation.py
